[package]
name = "berry-dash-ultimate"
version = "1.1.0"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "berry_dash_ultimate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

