[package]
name = "berry-dash-ultimate"
version = "1.5.0"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "berry_dash_ultimate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
